GIA-135 Implement error handling